styles: :sparkles: fixed aside and add new color and correcting z-index header

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,5 +1,6 @@
 $black: #000000;
 $white: #FFF;
+$text-opacity: #00000050;
 
 $primary-400: #FB953E;
 
