--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,11 @@
 @import "fonts";
 @import "reset";
 @import "colors";
+@import "sizes";
 @import "header";
 @import "products";
+@import "filters";
+
 
 .container {
   width: 100%;
@@ -12,4 +15,17 @@
 
 .main {
   padding: 76px 1rem 1rem 1rem;
+  display: flex;
+  gap: 1rem;
+
+  position: relative;
+
+  #aside-filters {
+    width: 100%;
+    max-width: $aside-width;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: fixed;
+  }
 }
